--- a/src/EditorPrototype/Templates/GeneralTemplate.xaml
+++ b/src/EditorPrototype/Templates/GeneralTemplate.xaml
@@ -8,21 +8,113 @@
     
     <ControlTemplate x:Key="NodeVertex"></ControlTemplate>
 
+    <Style x:Shared="False" TargetType="controls:StaticVertexConnectionPoint">
+
+        <Setter Property="Shape" Value="Circle" />
+
+        <Setter Property="Content">
+            <Setter.Value>
+                <Path Width="10"
+                      Height="10"
+                      HorizontalAlignment="Center"
+                      VerticalAlignment="Center"
+                      Data="M 38,0.791664C 58.5496,0.791664 75.2083,17.4504 75.2083,38C 75.2083,58.5496 58.5496,75.2083 38,75.2083C 17.4504,75.2083 0.791662,58.5496 0.791662,38C 0.791662,17.4504 17.4504,0.791664 38,0.791664 Z M 38,5.54166C 20.0738,5.54166 5.54167,20.0738 5.54167,38C 5.54167,55.9262 20.0738,70.4583 38,70.4583C 55.9262,70.4583 70.4583,55.9262 70.4583,38C 70.4583,20.0738 55.9262,5.54166 38,5.54166 Z "
+                      Stretch="Uniform"
+                      Stroke="Black"
+                      StrokeThickness="1" />
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <ControlTemplate x:Key="OperationVertex" TargetType="{x:Type controls:VertexControl}">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <StackPanel Name="PART_vcproot" Grid.Column="0">
+                <Border Margin="0,4,2,2" Padding="0">
+                    <controls:StaticVertexConnectionPoint Id="1" />
+                </Border>
+            </StackPanel>
+            <StackPanel Grid.Column="1">
+                <Image Source="{Binding Picture}" Margin="0" Width="80" Stretch="UniformToFill"/>
+                <controls:VertexLabelControl x:Name="PART_vertexLabel" Content="{Binding Name}" LabelPositionSide="Bottom" FontFamily="Lucida Sans Regular" />
+            </StackPanel>
+            <StackPanel Grid.Column="2" Orientation="Vertical">
+                <Border Margin="0,4,2,2" Padding="0">
+                    <controls:StaticVertexConnectionPoint Id="2" />
+                </Border>
+            </StackPanel>
+        </Grid>
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="SensorVertex" TargetType="{x:Type controls:VertexControl}">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0">
+                <Image Source="{Binding Picture}" Margin="0" Width="80" Stretch="UniformToFill"/>
+                <controls:VertexLabelControl x:Name="PART_vertexLabel" Content="{Binding Name}" LabelPositionSide="Bottom" FontFamily="Lucida Sans Regular" />
+            </StackPanel>
+            <StackPanel Grid.Column="1" Orientation="Vertical">
+                <Border Margin="0,4,2,2" Padding="0">
+                    <controls:StaticVertexConnectionPoint Id="2" />
+                </Border>
+            </StackPanel>
+        </Grid>
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="ActuatorVertex" TargetType="{x:Type controls:VertexControl}">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0">
+                <Border Margin="0,4,2,2" Padding="0">
+                    <controls:StaticVertexConnectionPoint Id="1" />
+                </Border>
+            </StackPanel>
+            <StackPanel Grid.Column="1">
+                <Image Source="{Binding Picture}" Margin="0" Width="80" Stretch="UniformToFill"/>
+                <controls:VertexLabelControl x:Name="PART_vertexLabel" Content="{Binding Name}" LabelPositionSide="Bottom" FontFamily="Lucida Sans Regular" />
+            </StackPanel>
+        </Grid>
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="IntervalVertex" TargetType="{x:Type controls:VertexControl}">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0">
+                <Border Margin="0,4,2,2" Padding="0">
+                    <controls:StaticVertexConnectionPoint Id="1" />
+                </Border>
+            </StackPanel>
+            <StackPanel Grid.Column="1">
+                <Image Source="{Binding Picture}" Margin="0" Width="80" Stretch="UniformToFill"/>
+                <controls:VertexLabelControl x:Name="PART_vertexLabel" Content="{Binding Name}" LabelPositionSide="Bottom" FontFamily="Lucida Sans Regular" />
+            </StackPanel>
+            <StackPanel Grid.Column="2">
+                <Border Margin="0,4,2,2" Padding="0">
+                    <controls:StaticVertexConnectionPoint Id="2" />
+                </Border>
+            </StackPanel>
+        </Grid>
+    </ControlTemplate>
+    
     <!-- VERTEX CONTROL -->
     <Style TargetType="{x:Type controls:VertexControl}">
         <Setter Property="Background" Value="{Binding Color}"/>
         <Setter Property="VertexShape" Value="None"/>
         <Setter Property= "ShowLabel" Value="True"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type controls:VertexControl}">
-                    <Grid>
-                        <Image Source="{Binding Picture}" Margin="0" Width="80" Stretch="UniformToFill"/>
-                        <controls:VertexLabelControl x:Name="PART_vertexLabel" Content="{Binding Name}" LabelPositionSide="Bottom" FontFamily="Lucida Sans Regular" />
-                    </Grid>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
 
         <!-- VERTEX DRAGGING CONTROL -->
         <Setter Property="controls:DragBehaviour.IsDragEnabled" Value="True" />
@@ -46,6 +138,30 @@
                     </Setter.Value>
                 </Setter>
                 <Setter Property="Background" Value="LightCoral" />
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Name}" Value="aAndOperation">
+                <Setter Property="Template" Value="{StaticResource OperationVertex}"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Name}" Value="aOrOperation">
+                <Setter Property="Template" Value="{StaticResource OperationVertex}"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Name}" Value="aOpenWindow">
+                <Setter Property="Template" Value="{StaticResource ActuatorVertex}"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Name}" Value="aCloseWindow">
+                <Setter Property="Template" Value="{StaticResource ActuatorVertex}"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Name}" Value="aPourSoil">
+                <Setter Property="Template" Value="{StaticResource ActuatorVertex}"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Name}" Value="aAirTemperature">
+                <Setter Property="Template" Value="{StaticResource SensorVertex}"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Name}" Value="aSoilTemperature">
+                <Setter Property="Template" Value="{StaticResource SensorVertex}"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Name}" Value="aInterval">
+                <Setter Property="Template" Value="{StaticResource IntervalVertex}"/>
             </DataTrigger>
         </Style.Triggers>
     </Style>
