--- a/src/WpfEditor/View/Templates/GeneralTemplate.xaml
+++ b/src/WpfEditor/View/Templates/GeneralTemplate.xaml
@@ -16,27 +16,38 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="http://schemas.panthernet.ru/graphx/">
+    xmlns:controls="http://schemas.panthernet.ru/graphx/"
+    xmlns:scene="clr-namespace:WpfControlsLib.Controls.Scene;assembly=WpfControlsLib">
 
     <!-- VERTEX CONTROL -->
     <Style TargetType="{x:Type controls:VertexControl}">
-        <Setter Property="Background" Value="{Binding Color}"/>
-        <Setter Property="VertexShape" Value="None"/>
-        <Setter Property= "ShowLabel" Value="True"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type controls:VertexControl}">
-                    <Grid>
-                        <Image Source="{Binding Picture}" Margin="0" Width="80" Stretch="UniformToFill"/>
-                        <controls:VertexLabelControl 
-                            x:Name="PART_vertexLabel" 
-                            Content="{Binding Name}" 
-                            LabelPositionSide="Bottom" 
-                            FontFamily="Lucida Sans Regular" />
-                    </Grid>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding IsVirtual}" Value="true">
+                <Setter Property="Width" Value="15pt"/>
+                <Setter Property="Height" Value="15pt"/>
+                <Setter Property="VertexShape" Value="Circle"/>
+            </DataTrigger>
+
+            <DataTrigger Binding="{Binding IsVirtual}" Value="false">
+                <Setter Property="Background" Value="{Binding Color}"/>
+                <Setter Property="VertexShape" Value="None"/>
+                <Setter Property= "ShowLabel" Value="True"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type controls:VertexControl}">
+                            <Grid>
+                                <Image Source="{Binding Picture}" Margin="0" Width="80" Stretch="UniformToFill"/>
+                                <controls:VertexLabelControl 
+                                x:Name="PART_vertexLabel" 
+                                Content="{Binding Name}" 
+                                LabelPositionSide="Bottom" 
+                                FontFamily="Lucida Sans Regular" />
+                            </Grid>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </DataTrigger>
+        </Style.Triggers>
 
         <!-- VERTEX DRAGGING CONTROL -->
         <Setter Property="controls:DragBehaviour.IsDragEnabled" Value="True" />
@@ -159,7 +170,6 @@
             </DataTrigger>
         </Style.Triggers>
     </Style>
-
 </ResourceDictionary>
 
 
