--- a/src/GeneratorForGH/ScenarioForGH.tt
+++ b/src/GeneratorForGH/ScenarioForGH.tt
@@ -12,12 +12,12 @@
  * See the License for the specific language governing permissions and
  * limitations under the License. */
 
-<#@ template language="C#" debug="True" #>
+<#@ template language="C#" debug="True" linePragmas="false"#>
 <#@ output extension="cs" #>
 <#@ import namespace="System.Collections" #>
 <#@ import namespace="System.Collections.Generic" #>
 <#@ import namespace="System.Linq" #>
-namespace Generator
+namespace GeneratorForGH
 {
 	using System;
 	using System.Linq;
@@ -25,13 +25,13 @@ namespace Generator
 	using System.Reactive.Linq;
 	using System.Reactive.Subjects;
 	using RobotSimulation;
-	//using Trik;
+	using Trik;
 
 	public class GeneratedCode
     {
 <#
 List<Repo.INode> modelNodes = new List<Repo.INode>();
-foreach (var x in r.Model("GreenhouseTestModel").Nodes) {
+foreach (var x in Repository.Model("GreenhouseTestModel").Nodes) {
 	modelNodes.Add(x);
 }
 	
@@ -80,9 +80,8 @@ foreach (var x in modelNodes) {
 }#>
 
 <#
-//bool[,] sourceOrTarget = new bool[modelNodes.Count, 2];
 
-foreach (var x in r.Model("GreenhouseTestModel").Edges) {
+foreach (var x in Repository.Model("GreenhouseTestModel").Edges) {
 	if (classOfElement(x.To.Name) == "Operation") { #>
 
 			element<#= modelNodes.IndexOf((Repo.INode)x.To)#>.IncomingValues.Add(<#= modelNodes.IndexOf((Repo.INode)x.From)#>, null);
@@ -94,28 +93,29 @@ foreach (var x in r.Model("GreenhouseTestModel").Edges) {
 <#
 
 int j = 0;
-foreach (var x in r.Model("GreenhouseTestModel").Edges) 
+foreach (var x in Repository.Model("GreenhouseTestModel").Edges) 
 { 
 	var source = x.From as Repo.INode;
 	var target = x.To as Repo.INode; #>
 			var sub<#= j #> = reactElement<#= modelNodes.IndexOf(source) #>.Subscribe(reactElement<#= modelNodes.IndexOf(target) #>);
 <#
 	j++;
-} #>
+} 
+            if (!TestWithRobotSimulation) { #>
+			var robot = new Model();
+            <# }
 
-			//var robot = new Model();
-			<# foreach (var x in modelNodes) { 
+            // defining ports for sensors, actuators and connecting them with real(or RobotSimulation) sensors/actuators 
+			foreach (var x in modelNodes) { 
 				if (classOfElement(x.Name) == "Sensor") { 
 					var port = x.Attributes.Where(y => y.Name == "port").AsEnumerable();
 					if (port.Any())
 					{
-						string p = port.First().StringValue; #>
-			
+						string p = port.First().StringValue; 
+                        if (TestWithRobotSimulation) { #>
             SensorSim sensorSim<#= modelNodes.IndexOf(x) #> = new SensorSim(<#= p #>);
 			sensorSim<#= modelNodes.IndexOf(x) #>.Index = <#= modelNodes.IndexOf(x) #>;
             Console.WriteLine("Sensor{0}: sensor at port {1}", <#= modelNodes.IndexOf(x) #>, <#= p #>);
-			//sensorSim<\#= modelNodes.IndexOf(x) \#>.Event += (sender, args) => 
-                //element<\#= modelNodes.IndexOf(x) \#>.Action(args);
 
             IObservable<int> observableForSimulation<#= modelNodes.IndexOf(x) #> =
 						System.Reactive.Linq.Observable.FromEventPattern<int>(
@@ -125,10 +125,13 @@ foreach (var x in r.Model("GreenhouseTestModel").Edges)
 							.Synchronize().DistinctUntilChanged();
 
             observableForSimulation<#= modelNodes.IndexOf(x) #>.Subscribe(reactElement<#= modelNodes.IndexOf(x) #>);
+                        <# }
+                        else { #>
 
-			//var s\<#= modelNodes.IndexOf(x) \#> = robot.AnalogSensors[Trik.Sensor.A\<#= p \#>].ToObservable().DistinctUntilChanged();
-			//s\<#= modelNodes.IndexOf(x) \#>.Subscribe(reactElement\<#= modelNodes.IndexOf(x) \#>);
-					<#}
+			var s\<#= modelNodes.IndexOf(x) \#> = robot.AnalogSensors[Trik.Sensor.A\<#= p \#>].ToObservable().DistinctUntilChanged();
+			s\<#= modelNodes.IndexOf(x) \#>.Subscribe(reactElement\<#= modelNodes.IndexOf(x) \#>);
+                        <# }
+                     }
 				}
 				if (classOfElement(x.Name) == "Actuator") { 
 					var port = x.Attributes.Where(y => y.Name == "port").AsEnumerable();
@@ -137,35 +140,17 @@ foreach (var x in r.Model("GreenhouseTestModel").Edges)
 						string p = port.First().StringValue; #>
 			
             Console.WriteLine("Actuator{0}: actuator at port {1}", <#= modelNodes.IndexOf(x) #>, <#= p #>);
+
+                        <# if (TestWithRobotSimulation) { #>
 			IObserver<int> observerForSimulation<#= modelNodes.IndexOf(x) #> = Observer.Create<int>(x => Console.WriteLine("----- Actuator at port {0} -- {1}  -----", <#= p #>, x));
 			reactElement<#= modelNodes.IndexOf(x) #>.Subscribe(observerForSimulation<#= modelNodes.IndexOf(x) #>);
-            
-            //reactElement\<#= modelNodes.IndexOf(x) \#>.Subscribe(robot.Motors[Trik.Motor.M\<#= p \#>]);
-					<#}
+                        <# }
+                        else { #>
+            reactElement\<#= modelNodes.IndexOf(x) \#>.Subscribe(robot.Motors[Trik.Motor.M\<#= p \#>]);
+                        <# }
+					}
 				}
-			}#>
-
-            Console.ReadLine();
-
-			//RobotSimulator();
-        }
-		
-		private static void RobotSimulator()
-        {
-			<# foreach (var x in modelNodes) { 
-				if (classOfElement(x.Name) == "Sensor") { 
-                    var port = x.Attributes.Where(y => y.Name == "port").AsEnumerable();
-					    if (port.Any())
-					    {
-						    string p = port.First().StringValue; #>
-
-			SensorSim sensorSim<#= modelNodes.IndexOf(x) #> = new SensorSim(<#= p #>);
-			sensorSim<#= modelNodes.IndexOf(x) #>.Index = <#= modelNodes.IndexOf(x) #>;
-			sensorSim<#= modelNodes.IndexOf(x) #>.Event += (sender, args) => 
-                element<#= modelNodes.IndexOf(x) #>.Action(args);
-                        <#}#>
-				<#}
-			}#>
+			} #>
 
             Console.ReadLine();
         }
@@ -211,5 +196,6 @@ string kindOfOperation(string name)
 	}
 }
 
-public Repo.IRepo r { get; set; }
+public Repo.IRepo Repository { get; set; }
+public bool TestWithRobotSimulation { get; set; }
 #>
